--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./js/stack.js"></script>
-  <script src="./js/queue.js"></script>
+  <!-- <script src="./js/stack.js"></script>
+  <script src="./js/queue.js"></script> -->
+  <script src="./js/linkedList.js"></script>
 </body>
 </html>
