几种简单的设计模式

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <!-- <script src="./js/stack.js"></script>
   <script src="./js/queue.js"></script> -->
   <script src="./js/linkedList.js"></script>
+  <script src="./js/designPat/index.js"></script>
 </body>
 </html>
