--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
   <!-- <script src="./js/stack.js"></script>
   <script src="./js/queue.js"></script> -->
-  <script src="./js/linkedList.js"></script>
-  <script src="./js/designPat/index.js"></script>
+  <!-- <script src="./js/dataStructures/linkedList.js"></script> -->
+  <!-- <script src="./js/designPat/index.js"></script> -->
+  <!-- <script src="./js/algorithm/bubbleSort.js"></script> -->
+  <script src="./js/algorithm/mergeSort.js"></script>
+  <!-- <script src="./js/algorithm/findRooting.js"></script> -->
 </body>
 </html>
