--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- <script src="./js/dataStructures/linkedList.js"></script> -->
   <!-- <script src="./js/designPat/index.js"></script> -->
   <!-- <script src="./js/algorithm/bubbleSort.js"></script> -->
-  <script src="./js/algorithm/mergeSort.js"></script>
-  <!-- <script src="./js/algorithm/findRooting.js"></script> -->
+  <!-- <script src="./js/algorithm/mergeSort.js"></script> -->
+  <script src="./js/algorithm/findRooting.js"></script>
 </body>
 </html>
