add folder & binary search

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- <script src="./js/stack.js"></script>
-  <script src="./js/queue.js"></script> -->
-  <script src="./js/dataStructures/linkedList.js"></script>
+  <script src="./js/dataStructures/stack.js"></script>
+  <!--<script src="./js/queue.js"></script> -->
+  <!-- <script src="./js/dataStructures/linkedList.js"></script> -->
   <!-- <script src="./js/designPat/index.js"></script> -->
   <!-- <script src="./js/algorithm/bubbleSort.js"></script> -->
   <!-- <script src="./js/algorithm/mergeSort.js"></script> -->
   <!-- <script src="./js/algorithm/findRooting.js"></script> -->
+  <!-- <script src="./js/algorithm/quickSort.js"></script> -->
 </body>
 </html>
