--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <!--<script src="./js/queue.js"></script> -->
   <!-- <script src="./js/dataStructures/linkedList.js"></script> -->
   <!-- <script src="./js/designPat/index.js"></script> -->
-  <!-- <script src="./js/algorithm/bubbleSort.js"></script> -->
-  <!-- <script src="./js/algorithm/mergeSort.js"></script> -->
-  <!-- <script src="./js/algorithm/findRooting.js"></script> -->
-  <!-- <script src="./js/algorithm/quickSort.js"></script> -->
+  <script src="./js/algorithm/dynamicProgramming/fibonacci.js"></script>
+  <script src="./js/algorithm/minCoinChange.js"></script>
 </body>
 </html>
